--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
+    "react-zoom-pan-pinch": "^3.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
