--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-range": "^1.8.14",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.1",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "react-zoom-pan-pinch": "^3.2.0",
